package com.net4w.builder.improve;

import lombok.Data;

/**
 * @author WangPingChun
 */
@Data
public class House {
    private String base;
    private String wall;
    private String roofed;
}
